# ramros

./: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  LAUNCH_FILE_CREATOR_PLAN.md  LICENSE  README.md  jest.ci.config.ts  jest.integration.config.ts  jest.unit.config.ts  package-lock.json  package.json  release-1.0-plan.md  release-plan.md  requirements.md  tsconfig.json  tsconfig.test.json
.github/workflows/: ci.yml
docs/: feature-2-complete.md  refresh-test-workflow.md
planning/: 00-fixes.md
src/: extension.ts
src/__tests__/integration/: cache-manager.integration.test.ts  duplicate-package-detector.integration.test.ts  terminal-manager.integration.test.ts  tree-provider.integration.test.ts  workspace-detector.integration.test.ts
src/__tests__/integration/__mocks__/: vscode.js
src/__tests__/integration/core/: package-discovery.test.ts
src/__tests__/integration/wizard/: package-creator.test.ts  package-form-validator.test.ts
src/__tests__/unit/: bag-session-service.test.ts  build-file-patcher.test.ts  launch-generator.test.ts  parameter-coercer.test.ts  ros-environment.test.ts
src/cache/: cache-manager.ts
src/core/: duplicate-package-detector.ts  node-analyzer.ts  package-discovery.ts  ros-environment.ts  ros2-cli-service.ts  workspace-detector.ts
src/executor/: bag-session-service.ts  terminal-manager.ts
src/test/e2e/: add-node.test.ts  index.ts  package-refresh.test.ts  package-wizard.test.ts  runTest.ts  tree-view.test.ts
src/test/unit/: package-discovery.test.ts
src/treeview/: live-tree-provider.ts  tools-tree-provider.ts  tree-items.ts  tree-provider.ts
src/wizard/: build-file-patcher.ts  interface-collector.ts  launch-generator.ts  launch-wizard.ts  package-creator.ts  package-form-validator.ts
src/wizard/templates/minimal-python/: setup.cfg
test-fixtures/empty-package-example/: CMakeLists.txt  package.xml
test-fixtures/interface-package-example/: CMakeLists.txt  package.xml
test-fixtures/interface-package-example/action/: NavigateToPose.action
test-fixtures/interface-package-example/msg/: GpsReading.msg  SensorData.msg
test-fixtures/interface-package-example/srv/: AddTwoInts.srv  GetStatus.srv
test-fixtures/manual-test/my_test_pkg/: {{node_name}}.py
test-fixtures/mixed-package-example/: CMakeLists.txt  package.xml  setup.py
test-fixtures/mixed-package-example/mixed_package_example/: python_node.py
test-fixtures/mixed-package-example/scripts/: python_node.py
test-fixtures/mixed-package-example/src/: cpp_node.cpp
test-fixtures/multi-workspace/ws1/install/: setup.bash
test-fixtures/multi-workspace/ws1/src/pkg_a/: CMakeLists.txt  package.xml
test-fixtures/multi-workspace/ws2/src/pkg_a/: package.xml
test-fixtures/workspace-duplicates/src/pkg_a/: package.xml
test-fixtures/workspace-duplicates/src/pkg_a_copy/: CMakeLists.txt  package.xml
test-fixtures/workspace-invalid/random-folder/: readme.txt
test-fixtures/workspace-valid/src/e2e_1783081861799_action_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783081861799_cpp_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783081861799_cpp_pkg/launch/: example_launch.py
test-fixtures/workspace-valid/src/e2e_1783081861799_cpp_pkg/src/: cpp_node.cpp
test-fixtures/workspace-valid/src/e2e_1783081861799_duplicate_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783081861799_empty_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783081861799_empty_py_pkg/: package.xml  setup.cfg  setup.py
test-fixtures/workspace-valid/src/e2e_1783081861799_interface_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783081861799_mixed_interface_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783081861799_py_pkg/: package.xml  setup.cfg  setup.py
test-fixtures/workspace-valid/src/e2e_1783081861799_py_pkg/e2e_1783081861799_py_pkg/: py_node.py
test-fixtures/workspace-valid/src/e2e_1783081861799_py_pkg/launch/: example_launch.py
test-fixtures/workspace-valid/src/e2e_1783081861799_service_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783081861799_standard_pkg/: CMakeLists.txt  package.xml  setup.py
test-fixtures/workspace-valid/src/e2e_1783081861799_standard_pkg/e2e_1783081861799_standard_pkg/: std_node.py
test-fixtures/workspace-valid/src/e2e_1783081861799_standard_pkg/launch/: example_launch.py
test-fixtures/workspace-valid/src/e2e_1783081861799_standard_pkg/src/: std_node.cpp
test-fixtures/workspace-valid/src/e2e_1783082027988_action_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783082027988_action_pkg/action/: NavigateToPose.action
test-fixtures/workspace-valid/src/e2e_1783082027988_cpp_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783082027988_cpp_pkg/launch/: example_launch.py
test-fixtures/workspace-valid/src/e2e_1783082027988_cpp_pkg/src/: cpp_node.cpp
test-fixtures/workspace-valid/src/e2e_1783082027988_duplicate_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783082027988_empty_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783082027988_empty_py_pkg/: package.xml  setup.cfg  setup.py
test-fixtures/workspace-valid/src/e2e_1783082027988_interface_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783082027988_mixed_interface_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783082027988_mixed_interface_pkg/action/: CustomAction.action
test-fixtures/workspace-valid/src/e2e_1783082027988_mixed_interface_pkg/srv/: CustomService.srv
test-fixtures/workspace-valid/src/e2e_1783082027988_py_pkg/: package.xml  setup.cfg  setup.py
test-fixtures/workspace-valid/src/e2e_1783082027988_service_pkg/: CMakeLists.txt  package.xml
test-fixtures/workspace-valid/src/e2e_1783082027988_standard_pkg/: CMakeLists.txt  package.xml  setup.py
test-fixtures/workspace-valid/src/my_package/: CMakeLists.txt  package.xml
(+12 files in other folders)
